--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="container">
         <div class="image-box">
             <div class="outline">
-                <img class="rectangle" src="rectangle.png" alt="">
+                <img class="rectangle" src="images/rectangle.png" alt="">
                 <div class="avatar">
-                    <img src="avatar.png" alt="">
+                    <img src="images/avatar.png" alt="">
                 </div>
                 <div class="name">
                     <h1>
